# thesma-python

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml  regenerate.yml
scripts/: regenerate.py
src/thesma/: __init__.py  _auth.py  _base_client.py  _export.py  _pagination.py  _retry.py  _types.py  _version.py  client.py  errors.py
src/thesma/_generated/: models.py
src/thesma/cli/: _formatters.py  _utils.py  main.py
src/thesma/cli/commands/: census.py  companies.py  events.py  export.py  filings.py  financials.py  holdings.py  insider_trades.py  ratios.py  screener.py
src/thesma/resources/: __init__.py  beneficial_ownership.py  census.py  companies.py  compensation.py  events.py  export.py  filings.py  financials.py  holdings.py  insider_holdings.py  insider_trades.py  proxy_votes.py  ratios.py  screener.py  sections.py  webhooks.py
tests/: conftest.py  test_cli.py  test_client.py  test_contract.py  test_errors.py  test_export_cli.py  test_export_types.py  test_formatters.py  test_models.py  test_pagination.py  test_retry.py  test_scaffold.py  test_sdk13_qa.py  test_sdk14_qa.py  test_types.py
tests/fixtures/: openapi.json
tests/test_resources/: test_beneficial_ownership.py  test_census.py  test_companies.py  test_compensation.py  test_events.py  test_export.py  test_filings.py  test_financials.py  test_holdings.py  test_insider_holdings.py  test_insider_trades.py  test_proxy_votes.py  test_ratios.py  test_screener.py  test_sections.py  test_webhooks.py
