[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thesma"
version = "0.9.0.0"
description = "Python SDK for the Thesma API — developer-friendly access to SEC EDGAR financial data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Thesma", email = "support@thesma.dev" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0,<1.0",
    "pydantic>=2.0,<3.0",
    "click>=8.0,<9.0",
    "tabulate>=0.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "ruff>=0.4",
    "mypy>=1.0",
    "types-tabulate>=0.9",
    "datamodel-code-generator>=0.25",
]

[project.scripts]
thesma = "thesma.cli.main:cli"

[project.urls]
Homepage = "https://thesma.dev"
Documentation = "https://docs.thesma.dev"
Repository = "https://github.com/thesma-dev/thesma-python"

[tool.hatch.build.targets.wheel]
packages = ["src/thesma"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "contract: contract tests that verify generated models match the OpenAPI spec",
]

[tool.mypy]
strict = true
python_version = "3.9"
packages = ["thesma"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "thesma._generated.*"
ignore_errors = true
